Archive/2e941177e70d1e2ec26efbf718fff72e-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:37:23: error: expected initializer before 'ff'
 int aaaaaaaaaaaaaaa() ff;
                       ^
